# seedapp

./: Cargo.toml  README.md  build.rs
src/: main.rs
static/: index.html
web/: Cargo.toml
web/src/: lib.rs
